# ameen-context-mcp

./: CLAUDE.md  README.md  install_hooks.sh  pyproject.toml  server.py
data/: _pending_structuring.jsonl  _structured.jsonl  _unclassified_cwds.json  grant_context.json  identity.json  organizations.json  preferences.json  technical_skills.json  work_context.json
data/_unclassified/: 2026-05-25-190835_unclassified.json
data/digests/: digest_2026-05-25.md
data/memories/: 2026-05-23_discovery-automation.md
data/projects/: registry.json
data/projects/agentos/memory/: project_memory.json
data/projects/agentos/sessions/: 2026-05-23-1545-84fd986f_Ameen_Hassan_backfill.json  2026-05-23-1638-1510da95_Ameen_Hassan_backfill.json  2026-05-23-1638-9f53e050_Ameen_Hassan_backfill.json  2026-05-23-1638-ab528c74_Ameen_Hassan_backfill.json  2026-05-24-1346-42c68c22_Ameen_Hassan_backfill.json  2026-05-24-1834_Ameen_Hassan_auto.json  2026-05-24-1848_Ameen_Hassan_auto.json  2026-05-24-1850_Ameen_Hassan_auto.json  2026-05-24-1851_Ameen_Hassan_auto.json  2026-05-24-1853_Ameen_Hassan_auto.json  2026-05-24-1854_Ameen_Hassan_auto.json  2026-05-24-1855_Ameen_Hassan_auto.json  2026-05-24-1856_Ameen_Hassan_auto.json  2026-05-24-1945_Ameen_Hassan_auto.json  2026-05-24-2017_Ameen_Hassan_auto.json  2026-05-24-2018_Ameen_Hassan_auto.json  2026-05-25-172600_Ameen_Hassan_auto.json  (+11 more)
hooks/: backfill_sessions.py  run_synthesis.sh  session_end.py  session_start.py  structure_sessions.py  synthesize_memory.py
launchd/: com.ameenhassan.agentos-synthesis.plist
(+35 files in other folders)
