[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ameen-context-mcp"
version = "0.1.0"
description = "Personal context MCP server for Ameen Hassan — GitHub-backed"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
ameen-context-mcp = "server:mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
